<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="16dp"
    android:paddingTop="16dp"
    android:paddingRight="16dp"
    android:paddingBottom="16dp"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/backButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:text="@string/backButton"
        android:visibility="gone" />

    <LinearLayout
        android:id="@+id/setupContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <Button
            android:id="@+id/easyButton"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:text="@string/easyButton" />

        <Button
            android:id="@+id/mediumButton"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:text="@string/mediumButton" />

        <Button
            android:id="@+id/hardButton"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="16dp"
            android:text="@string/hardButton" />

        <Button
            android:id="@+id/expertButton"
            android:layout_width="320dp"
            android:layout_height="48dp"
            android:layout_gravity="center_horizontal"
            android:text="@string/expertButton" />
    </LinearLayout>


    <GridLayout
        android:id="@+id/gameContainer"
        android:layout_width="380dp"
        android:layout_height="500dp"
        android:layout_alignParentTop="true"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_gravity="center"
        android:layout_marginStart="0dp"
        android:layout_marginTop="126dp"
        android:layout_marginEnd="0dp"
        android:layout_marginBottom="120dp"
        android:visibility="gone" />

    <Button
        android:id="@+id/restartButton"
        android:layout_width="80dp"
        android:layout_height="100dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_centerInParent="true"
        android:layout_marginStart="110dp"
        android:layout_marginTop="493dp"
        android:layout_marginEnd="89dp"
        android:layout_marginBottom="153dp"
        android:text="@string/restartButton"
        android:visibility="gone" />

    <TextView
        android:id="@+id/gameMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text=""
        android:textSize="20sp"
        android:textStyle="bold"
        android:textColor="@android:color/black"
        android:visibility="gone" />

    <TextView
        android:id="@+id/timerDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="5dp"
        android:text=""
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        android:visibility="gone" />

</RelativeLayout>
